--- a/asssets/css/style.css
+++ b/asssets/css/style.css
@@ -5286,6 +5286,18 @@ input[type="range"]::-webkit-slider-thumb {
     height: 34rem;
     width: 29.75rem;
     overflow: hidden;
+    position: relative;
+}
+.product_page__add_wishlist {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    z-index: 22;
+}
+.product_page__add_wishlist svg {
+    width: 1.625rem;
+    height: auto;
+    
 }
 .product_page__left .slider__image {
     width: 100%;
@@ -5556,5 +5568,233 @@ input[type="range"]::-webkit-slider-thumb {
     line-height: normal;
     margin-top: 2rem;
     max-width: 58.3125rem;
+}
+
+.additional {
+    padding: 4rem 0;
+}
+.additional__title {
+    margin-bottom: 3.25rem;
+}
+.additional__title h2 {
+    color: var(--Nude, #e3dac9);
+    text-align: center;
+    font-family: dance;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.75rem; /* 110% */
+}
+
+.reviews {
+    padding: 4rem 0;
+    overflow: hidden;
+    background: radial-gradient(50% 50% at 50% 50%, #08135a 0%, #070f21 100%), #070f21;
+}
+.reviews__title {
+    margin-bottom: 3.25rem;
+}
+.reviews__title h2 {
+    color: var(--Nude, #e3dac9);
+    text-align: center;
+    font-family: dance;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.75rem; /* 110% */
+}
+.reviews__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 3.25rem;
+}
+.reviews__bottom .reviews__add {
+    font-family: Involve;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: none;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto;
+    text-underline-position: from-font;
+    background: var(
+        --Gold-Gradient,
+        linear-gradient(
+            90deg,
+            #9a8c84 1.9%,
+            #d3ccc5 42.54%,
+            #ded9d1 50.21%,
+            #d1cac0 60.16%,
+            #c7c0b1 71.58%,
+            #c4bcac 80.97%,
+            #b8af9e 86.01%,
+            #978e78 95.54%,
+            #867664 100.12%
+        )
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.reviews__bottom .reviews__btn {
+    display: flex;
+    align-items: center;
+    gap: 1.1875rem;
+}
+.reviews__bottom .reviews__btn button svg {
+    width: 2.5rem;
+    height: auto;
+}
+.reviews__swiper .swiper-wrapper {
+    align-items: stretch;
+}
+.reviews__swiper .swiper-slide {
+    height: auto;
+}
+.reviews__slide_content {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, #1d2639 0%, #051027 72.5%);
+    display: flex;
+    padding: 2rem 1.75rem;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+.reviews__slide__name {
+    color: var(--Nude, #e3dac9);
+    font-family: Involve;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.01rem;
+}
+.reviews__slide__text {
+    color: var(--Nude, #e3dac9);
+    font-family: Involve;
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.reviews__slide__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.reviews__slide__stars {
+    display: flex;
+    align-items: center;
+    gap: 0.375rem;
+}
+.reviews__slide__stars img {
+    width: 1.125rem;
+    height: auto;
+}
+.reviews__slide__date {
+    color: var(--Nude, #e3dac9);
+    font-family: Involve;
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.product_page_mobile__swiper {
+    display: none;
+}
+@media screen and (max-width: 768px) {
+    .product_page {
+        padding: 4rem 0 2rem;
+    }
+    .product_page__top {
+        display: flex;
+        gap: 0;
+    }
+    .product_page__left {
+        display: none;
+    }
+    .product_page__right {
+        width: 100%;
+        gap: 1.25rem;
+    }
+    
+    .product_page__button {
+        flex-direction: column;
+    }
+    .product_page__button .product_page__add {
+        width: 100%;
+    }
+    .product_page__button .product_page__construktor {
+        width: 100%;
+    }
+    
+    .product_page__bottom {
+        margin-top: 2rem;
+    }
+    .product_page__tabcontent {
+        max-width: 100%;
+    }
+    
+    .additional {
+        padding: 2rem 0;
+    }
+    .additional__title {
+        margin-bottom: 1.5rem;
+    }
+    .additional__title h2 {
+        font-size: 1.75rem;
+        line-height: normal;
+    }
+    
+    .reviews {
+        padding: 2rem 0 4rem;
+        background: radial-gradient(50% 50% at 50% 50%, #08135A 0%, #070F21 100%), #070F21;
+    }
+    .reviews__title {
+        margin-bottom: 1.5rem;
+    }
+    .reviews__title h2 {
+        font-size: 1.75rem;
+        line-height: normal;
+    }
+    .reviews__bottom {
+        margin-top: 1.5rem;
+    }
+    .reviews__bottom .reviews__btn {
+        display: none;
+    }
+    .reviews__swiper {
+        overflow: visible;
+    }
+    .product_page_mobile__swiper {
+        display: block;
+        width: 100%;
+        position: relative;
+    }
+    .product_page__add_wishlist_mobile {
+        position: absolute;
+        z-index: 33;
+        right: 1.25rem;
+        top: 1.25rem;
+    }
+    .product_page__add_wishlist_mobile svg {
+        width: 1.5rem;
+        height: auto;
+    }
+    .product_page_mobile__swiper .swiper-wrapper {
+        align-items: stretch;
+    }
+    .product_page_mobile__swiper .swiper-slide {
+        height: auto;
+    }
+    .product_page_mobile__swiper .swiper-slide img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 /* product_page end  */
